<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Love</string>

    <!-- Activity Titles -->
    <string name="title_activity_ilove">I Love</string>
    <string name="title_activity_positive_log">Positive Log</string>
    <string name="title_activity_positive_log_upsert">View</string>
    <string name="title_activity_setting_up">Setting Up</string>
    <string name="title_activity_status">Status</string>

    <!--  Main Activity -->
    <string name="quote">And in her smile I see something more beautiful than the stars.</string>
    <string name="quote2">We\'ve got this gift of love, but love is like a precious plant. You can\'t just accept it and leave it in the cupboard or just think it\'s going to get on by itself. You\'ve got to keep watering it. You\'ve got to really look after it and nurture it.</string>

    <!-- Positive Log Activity -->
    <string name="thankful_for">I\'M THANKFUL FOR</string>
    <!-- Navigation Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!--  Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_create">Create</string>
    <string name="action_update">Update</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>


    <!--  Dummy Text For PoemViewActivity -->
    <string name="date_label">Date:</string>
    <string name="name_label">Name:</string>
    <string name="author_text">Author:</string>

    <string name="dummy_date">17 Dec 2015</string>
    <string name="dummy_name_text">Daniel Prince</string>
    <string name="dummy_poem_text">This is the poem name…</string>
    <string name="dummy_long_text">I love you</string>
    <string name="title_activity_view_list">ViewListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_list_item">ViewListItemActivity</string>


</resources>