<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#AB47BC"
              android:orientation="vertical"
              tools:context=".ui.PoemViewActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_purple"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/name_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tvPoemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_poem_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_purple"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/author_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_name_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_purple"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/date_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPoem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/dummy_long_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
